welcome.lessons.welcome.array.has271.Has271.scala.error
has271:11: error: value >=- is not a member of Int
      } else if (((nums(i+2)-(nums(i)-1))<=2)&&((nums(i+2)-(nums(i)-1))>=-2)) {
                                                                       ^